--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.16",
     "dotenv": "^17.2.3",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.553.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
